app show item title on ios bug fixed

--- a/packages/app/src/app/pages/ordering/menu-page/category-grid-view/category-grid-view.component.scss
+++ b/packages/app/src/app/pages/ordering/menu-page/category-grid-view/category-grid-view.component.scss
@@ -15,7 +15,6 @@
       font-size: 13px !important;
       height: 24px;
       line-height: 24px;
-      flex: 1;
       font-weight: 900;
       text-shadow: 0 1px 3px black, 0 -1px 3px black, 1px 0 3px black, -1px 0 3px black;
     }
